unpackaged/main/default/objects/Opportunity_Promotion__c/Opportunity_Promotion__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between opportunities and promotions, facilitating a many to many relation.</description>
    <label>Opportunity Promotion</label>
    <nameField>
        <displayFormat>OP-{00000000}</displayFormat>
        <label>Opportunity Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>