unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Blood_Drive_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Blood_Drive_Opportunity__c</fullName>
    <description>Blood drive opportunity</description>
    <inlineHelpText>Blood drive opportunity</inlineHelpText>
    <label>Blood Drive Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Promotions</relationshipLabel>
    <relationshipName>Opportunity_Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>