unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ID__c</fullName>
    <label>Delivery ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
                <default>true</default>
                <label>Drive</label>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>