unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>When Delivery ID is &quot;Other&quot;</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>