unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <formula>Blood_Drive_Opportunity__r.Drive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>