unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Opportunity close date</description>
    <formula>Blood_Drive_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity close date</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>