unpackaged/main/default/objects/Opportunity_Promotion__c/fields/Promotion_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_End_Date__c</fullName>
    <description>Promotion end date</description>
    <formula>Promotion__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Promotion end date</inlineHelpText>
    <label>Promotion End Date</label>
    <type>Date</type>
</CustomField>