unpackaged/main/default/objects/Opportunity_Promotion__c/validationRules/ValidationInDeliveryID.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationInDeliveryID</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Delivery_ID__c,&quot;Other&quot;) &amp;&amp; ISBLANK(Description__c)</errorConditionFormula>
    <errorMessage>If the Delivery ID is &quot;Other&quot;. you must fill up the Description.</errorMessage>
</ValidationRule>