unpackaged/main/default/objects/Opportunity_Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Blood_Drive_Opportunity__c</columns>
    <columns>Promotion__c</columns>
    <columns>Quantity__c</columns>
    <columns>Delivery_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>