unpackaged/main/default/objects/Opportunity_Promotion__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>Blood_Drive_Opportunity__c</columns>
    <columns>Promotion__c</columns>
    <columns>Quantity__c</columns>
    <columns>Delivery_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All new</label>
</ListView>