unpackaged/main/default/objects/Opportunity_Promotion__c/listViews/My_Opportunity_Promotions.listView-meta.xml
<ListView>
    <fullName>My_Opportunity_Promotions</fullName>
    <columns>Blood_Drive_Opportunity__c</columns>
    <columns>Promotion__c</columns>
    <columns>Quantity__c</columns>
    <columns>Delivery_ID__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunity Promotions</label>
</ListView>